--- a/Soo/index2.css
+++ b/Soo/index2.css
@@ -9,13 +9,13 @@ body {
 }
 
 .cursor_item {
-    width: 50px;
-    height: 50px;
-    background: red;
+    width: 60px;
+    height: 160px;
+    background-image: url(./rocket-cursor.png);
     position: absolute;
     left: 0;
     top: 0;
-    margin-top: -25px;
+    margin-top: -110px;
     margin-left: -25px;
 }
 
