--- a/Soo/myPage/Test/scss/panel.scss
+++ b/Soo/myPage/Test/scss/panel.scss
@@ -2,10 +2,10 @@
   width: 30vw;
   height: 95vh;
   position: absolute;
-  left: 50%;
-  top: 100%;
+  left: 20%;
+  top: 40%;
   margin-left: -10vw;
-  //   margin-top: -32.5vh;
+  margin-top: -32.5vh;
   transition: 1s;
 
   article {
@@ -16,20 +16,20 @@
     left: 0px;
 
     .inner {
-      width: 100px;
-      height: 100px;
+      width: 100%;
+      height: 100%;
       padding: 5vh 2.5vw 8vh;
       border-radius: 10px;
-      box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1);
-      opacity: 0.6;
-      background-color: white;
-      transform: scale(0.8);
+      // box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1);
+      opacity: 0.3;
+      // background-color: white;
+      // transform: scale(0.8);
       transition: 1s;
 
       .pic {
         width: 150px;
         height: 282px;
-        position: relative;
+        position: absolute;
         background-repeat: no-repeat;
         // background-position: -9999px -9999px;
 
@@ -143,7 +143,7 @@
   }
 
   50% {
-    transform: translate(0, -40%) rotate(180deg) scale(1.2);
+    transform: translate(0, -40%) rotate(180deg) scale(1.1);
   }
 
   100% {
