--- a/Hoon/lastText.css
+++ b/Hoon/lastText.css
@@ -36,7 +36,7 @@ section .container p {
   font-size: 5em;
 }
 #lastText .container .part-1 {
-  border: 1px solid white;
+  /* border: 1px solid white; */
   /* transform: translateX(-700px); */
   transition: 1s;
 }
@@ -44,7 +44,7 @@ section .container p {
   transform: translateX(0px);
 } */
 #lastText .container .part-2 {
-  border: 1px solid white;
+  /* border: 1px solid white; */
   margin-left: 5em;
   /* transform: translateX(700px); */
   transition: 1s;
@@ -65,7 +65,7 @@ section .container p {
 #lastText .container .part-3 {
   /* margin-top: 5em; */
   margin-left: 30em;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   /* transform: translateX(-700px); */
   transition: 1s;
 }
@@ -74,7 +74,7 @@ section .container p {
 } */
 #lastText .container .part-4 {
   margin-left: 35em;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   transition: 1s;
 }
 
