--- a/Soo/myPage/Test/scss/_explain.scss
+++ b/Soo/myPage/Test/scss/_explain.scss
@@ -1,10 +1,65 @@
-#p7 .explain {
-  position: relative;
-  transform: translate(93%, 10%);
+#p7 .promotion {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translate(93%, 5%);
   width: 50vw;
-  height: 40vw;
-  border: 2px solid red;
+  height: 45vw;
 
-  .ch_ex {
+  & .swiper {
+    width: 360px;
+    height: 480px;
   }
+
+  & .swiper-slide {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    border-radius: 18px;
+    font-size: 22px;
+    font-weight: bold;
+    color: #fff;
+  }
+
+  & .swiper-slide:nth-child(1n) {
+    background-image: url("/Soo/myPage/photo/ch_red.jpg");
+    stroke: #fff;
+    color: red;
+  }
+
+  & .swiper-slide:nth-child(2n) {
+    background-image: url("/Soo/myPage/photo/ch_orange.jpg");
+  }
+
+  & .swiper-slide:nth-child(3n) {
+    background-image: url("/Soo/myPage/photo/ch_yellow.jpg");
+  }
+
+  & .swiper-slide:nth-child(4n) {
+    background-image: url("/Soo/myPage/photo/ch_green.jpg");
+  }
+
+  & .swiper-slide:nth-child(5n) {
+    background-image: url("/Soo/myPage/photo/ch_sky.jpg");
+  }
+
+  & .swiper-slide:nth-child(6n) {
+    background-image: url("/Soo/myPage/photo/ch_navy.jpg");
+  }
+
+  & .swiper-slide:nth-child(7n) {
+    background-image: url("/Soo/myPage/photo/ch_violet.jpg");
+  }
+
+  & .swiper-slide:nth-child(8n) {
+    background-image: url("/Soo/myPage/photo/ch_black.jpg");
+  }
+
+  // & .swiper-slide:nth-child(9n) {
+  //   background-color: rgb(218, 12, 218);
+  // }
+
+  // & .swiper-slide:nth-child(10n) {
+  //   background-color: rgb(54, 94, 77);
+  // }
 }
