--- a/Soo/myPage/Test/scss/style.scss
+++ b/Soo/myPage/Test/scss/style.scss
@@ -1,10 +1,14 @@
 /* fonts */
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 /* font-family: 'Ubuntu', sans-serif; */
+@import "greensock";
 
 @import "flag";
 // @import "reset";
 
+.box {
+  position: relative;
+}
 // /* Common */
 figure {
   font: 16px "Ubuntu";
