--- a/COMPLETE/main.css
+++ b/COMPLETE/main.css
@@ -280,3 +280,113 @@ body {
     transform: scale(5.0);
 } */
 /* =================================================================================== */
+section#pg_4 {
+  width: 100%;
+  height: 100vh;
+  margin-top: 100vh;
+  /* background-color: black; */
+  overflow: hidden;
+}
+
+section#pg_4 .container {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+
+section#pg_4 .container p {
+  color: white;
+}
+
+#pg_4 .container {
+  padding: 6em;
+}
+
+#pg_4 .container div {
+  margin-top: 2em;
+}
+#pg_4 .container p {
+  font-size: 5em;
+}
+#pg_4 .container .part-1 {
+  /* border: 1px solid white; */
+  /* transform: translateX(-700px); */
+  transition: 1s;
+}
+/* #pg_4 .container .part-1:hover {
+  transform: translateX(0px);
+} */
+#pg_4 .container .part-2 {
+  /* border: 1px solid white; */
+  margin-left: 5em;
+  /* transform: translateX(700px); */
+  transition: 1s;
+}
+/* #pg_4 .container .part-2:hover {
+  transform: translateX(0px);
+} */
+
+/* 정강이 로고 */
+#pg_4 .container .commet img {
+  position: absolute;
+  width: 60vw;
+  height: 60vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-40%, -65%);
+}
+#pg_4 .container .part-3 {
+  /* margin-top: 5em; */
+  margin-left: 30em;
+  /* border: 1px solid white; */
+  /* transform: translateX(-700px); */
+  transition: 1s;
+}
+/* #pg_4 .container .part-3:hover {
+  transform: translateX(0px);
+} */
+#pg_4 .container .part-4 {
+  margin-left: 35em;
+  /* border: 1px solid white; */
+  transition: 1s;
+}
+
+#pg_4 .container .questionMark {
+  position: absolute;
+  top: 70%;
+  right: 15%;
+  transform: translate(-50%, -50%);
+  /* width: 1vw;
+  height: 1vw; */
+}
+
+#pg_4 .container .questionMark img {
+  width: 15vw;
+  height: 15vw;
+}
+
+#pg_4 .container .monster {
+  position: absolute;
+  top: 55%;
+  left: 15%;
+}
+#pg_4 .container .monster img {
+  width: 20vw;
+  height: 20vw;
+}
+/* ?를 텍스트로 구현하는것보다 
+네온 느낌나는 img 구해서 하는게 더 좋을것 같아서
+내일 승수한테 조언구하고 승수한테 부탁하기 */
+
+/* #pg_4 .container .questionMark > p {
+  position: absolute;
+  border: 1px solid #fff;
+  font-size: 4em;
+  color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+} */
+
+/* 왼쪽 아래 대각선에 외계괴물 귀여운거 넣기
+조원들에게 컨펌 받기 */
