--- a/Hoon/lastText.css
+++ b/Hoon/lastText.css
@@ -5,54 +5,54 @@
   box-sizing: border-box;
 }
 
-section#lastText {
+section#pg_4 {
   width: 100%;
   height: 100vh;
   /* background-color: black; */
   overflow: hidden;
 }
 
-section#lastText .container {
+section#pg_4 .container {
   width: 100%;
   height: 100vh;
   background-color: black;
   position: relative;
 }
 
-section#lastText .container p {
+section#pg_4 .container p {
   color: white;
 }
 
-#lastText .container {
+#pg_4 .container {
   padding: 6em;
 }
 
-#lastText .container div {
+#pg_4 .container div {
   margin-top: 2em;
 }
-#lastText .container p {
+#pg_4 .container p {
   font-size: 5em;
 }
-#lastText .container .part-1 {
+#pg_4 .container .part-1 {
   /* border: 1px solid white; */
   /* transform: translateX(-700px); */
   transition: 1s;
 }
-/* #lastText .container .part-1:hover {
+/* #pg_4 .container .part-1:hover {
   transform: translateX(0px);
 } */
-#lastText .container .part-2 {
+#pg_4 .container .part-2 {
   /* border: 1px solid white; */
   margin-left: 5em;
   /* transform: translateX(700px); */
   transition: 1s;
 }
-/* #lastText .container .part-2:hover {
+/* #pg_4 .container .part-2:hover {
   transform: translateX(0px);
 } */
 
 /* 정강이 로고 */
-#lastText .container .commet img {
+#pg_4 .container .commet img {
   position: absolute;
   width: 60vw;
   height: 60vw;
@@ -60,23 +60,23 @@ section#lastText .container p {
   left: 50%;
   transform: translate(-40%, -65%);
 }
-#lastText .container .part-3 {
+#pg_4 .container .part-3 {
   /* margin-top: 5em; */
   margin-left: 30em;
   /* border: 1px solid white; */
   /* transform: translateX(-700px); */
   transition: 1s;
 }
-/* #lastText .container .part-3:hover {
+/* #pg_4 .container .part-3:hover {
   transform: translateX(0px);
 } */
-#lastText .container .part-4 {
+#pg_4 .container .part-4 {
   margin-left: 35em;
   /* border: 1px solid white; */
   transition: 1s;
 }
 
-#lastText .container .questionMark {
+#pg_4 .container .questionMark {
   position: absolute;
   top: 70%;
   right: 15%;
@@ -85,17 +85,17 @@ section#lastText .container p {
   height: 1vw; */
 }
 
-#lastText .container .questionMark img {
+#pg_4 .container .questionMark img {
   width: 15vw;
   height: 15vw;
 }
 
-#lastText .container .monster {
+#pg_4 .container .monster {
   position: absolute;
   top: 55%;
   left: 15%;
 }
-#lastText .container .monster img {
+#pg_4 .container .monster img {
   width: 20vw;
   height: 20vw;
 }
@@ -103,7 +103,7 @@ section#lastText .container p {
 네온 느낌나는 img 구해서 하는게 더 좋을것 같아서
 내일 승수한테 조언구하고 승수한테 부탁하기 */
 
-/* #lastText .container .questionMark > p {
+/* #pg_4 .container .questionMark > p {
   position: absolute;
   border: 1px solid #fff;
   font-size: 4em;
