--- a/1/pg_1/test7.css
+++ b/1/pg_1/test7.css
@@ -11,7 +11,7 @@ font-family: 'Roboto', sans-serif; */
 }
 
 /* BANNER */
-#pg_1 .banner {
+.pg_1 .banner {
   position: absolute;
   width: 100%;
   height: 100vh;
@@ -21,7 +21,7 @@ font-family: 'Roboto', sans-serif; */
   align-items: center;
 }
 
-#pg_1 .banner video {
+.pg_1 .banner video {
   position: absolute;
   top: 0;
   left: 0;
@@ -30,7 +30,7 @@ font-family: 'Roboto', sans-serif; */
   object-fit: cover;
 }
 
-#pg_1 .banner h2 {
+.pg_1 .banner h2 {
   /* position: absolute; */
   /* top: 0;
     left: 0; */
@@ -46,90 +46,90 @@ font-family: 'Roboto', sans-serif; */
   /* animation: glow 2s 6s ease-in-out infinite; */
 }
 
-#pg_1 .banner span {
+.pg_1 .banner span {
   /* animation: glow 2s 6s ease-in-out infinite; */
   display: inline-block;
 }
 
 /* CONTAINER */
-#pg_1 .container {
+.pg_1 .container {
   display: flex;
   flex-direction: column;
 }
 
-#pg_1 .container h2 {
+.pg_1 .container h2 {
   display: block;
 }
 
 /* TITLE */
-#pg_1 .container .title1 {
-  transform: translate(600vh, 0);
+.pg_1 .container .title1 {
+  transform: translate(600vw, 0);
 }
 
-#pg_1:hover .container .title1 {
-  transform: translate(37vh, 0);
+.pg_1:hover .container .title1 {
+  transform: translate(23.5vw, 0);
   transition: 4s;
-  transition-delay: 4s;
+  /* transition-delay: 4s; */
 }
 
-#pg_1:active .container .title1 {
-  transform: translate(37vh, 32.4vh);
+.pg_1:active .container .title1 {
+  transform: translate(24vw, 32.4vh);
   transition: 1s;
 }
 
-#pg_1 .container .title2 {
+.pg_1 .container .title2 {
   transform: translate(-600vh, 0);
 }
 
-#pg_1:hover .container .title2 {
-  transform: translate(-30vh, 0);
+.pg_1:hover .container .title2 {
+  transform: translate(-20vh, 0);
   transition: 4s;
-  transition-delay: 6s;
+  /* transition-delay: 6s; */
 }
 
-#pg_1 .container .title3 {
-  transform: translate(600vh, 0);
+.pg_1 .container .title3 {
+  transform: translate(600vw, 0);
 }
 
-#pg_1:hover .container .title3 {
-  transform: translate(22vh, 0);
+.pg_1:hover .container .title3 {
+  transform: translate(16vw, 0);
   transition: 3s;
-  transition-delay: 8s;
+  /* transition-delay: 8s; */
 }
 
-#pg_1:active .container .title3 {
-  transform: translate(21.8vh, -32.2vh);
+.pg_1:active .container .title3 {
+  transform: translate(32vh, -32.2vh);
   transition: 1s;
 }
 
-#pg_1 .container .title1 .title_neon {
+.pg_1 .container .title1 .title_neon {
   animation: glow 2s 15s ease-in-out infinite;
 }
 
-#pg_1 .container .title1 .title_opacity0 {
+.pg_1 .container .title1 .title_opacity0 {
   animation: shadownone 2s 15s ease infinite;
   transition: 2s;
   margin-top: 4vh;
 }
 
-#pg_1 .container .title2 .title_neon {
+.pg_1 .container .title2 .title_neon {
   animation: glow 5s 17s ease-in-out infinite;
   transition-delay: 0.1s;
   margin-top: 4vh;
 }
 
-#pg_1 .container .title2 .title_opacity0 {
+.pg_1 .container .title2 .title_opacity0 {
   animation: shadownone 2s 17s ease infinite;
   transition-delay: 0.1s;
   margin-top: 4vh;
 }
 
-#pg_1 .container .title3 .title_neon {
+.pg_1 .container .title3 .title_neon {
   animation: glow 4s 19s ease-in-out infinite;
   margin-top: 4vh;
 }
 
-#pg_1 .container .title3 .title_opacity0 {
+.pg_1 .container .title3 .title_opacity0 {
   animation: shadownone 2s 19s ease infinite;
 }
 
