--- a/Soo/myPage/Test/scss/_greensock.scss
+++ b/Soo/myPage/Test/scss/_greensock.scss
@@ -1,11 +1,11 @@
 .box .greensock .intro {
-  height: 3000vh;
-  width: 100%;
-  padding: 5vw;
-  text-align: center;
-  color: white;
-  font: 12vh/1.8 "arial";
+    height: 3000vh;
+    width: 100%;
+    padding: 5vw;
+    color: white;
+    font: 10vw/1.8 "arial";
 }
 
 .box .greensock .intro .h1 {
+    left: 0; !important
 }
